day-two/01-ingress-operator/testing/example-app.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example-app-testing
  labels:
    openshift.io/cluster-monitoring: "true"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: example-app-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: webserver
          image: docker.io/nexusuw/delay-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            # limits:
              # cpu: 200m
              # memory: 128Mi
      nodeSelector:
        node-role.kubernetes.io/perf: ""
---
apiVersion: v1
kind: Service
metadata:
  name: app-example
  namespace: example-app-testing
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: example
